--- a/main.html
+++ b/main.html
@@ -4,22 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-    <style>
-        div{
-            width: 200px;
-    background-color: purple;
-    border-left-color: green;
-    border-width: 5px;
-    padding: 10px;    
-    font-size: 20px;
-    color: white;
-        }
-    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div><u>This is a Heading</u></div>
+    <h1 id="heading"><u>This is a Heading</u> </h1>
     <script type="text/javascript" src="./script.js">
 </script>
 
