--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1 id="heading"><u>This is a Heading</u> </h1>
+    <div class="container">
+    <h1 class="heading"><u>This is a Heading</u> </h1>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
