--- a/main.html
+++ b/main.html
@@ -4,23 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-    <style>
-        div{
-            width: 200px;
-			background-color: purple;
-			border-left-color: green;
-			border-left-width: 5px;
-			padding: 10px;
-			font-size: 20px;
-			color: white;
-        }
-    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <div class="container">
-    <h1 class="heading"><u>This is a Heading</u> </h1>
+		
+		<h1 style="color: white; font-size: 20px"><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
 </script>
