--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <div class="container">
 		
-		<h1 style="color: white; font-size: 20px"><u>This is a Heading</u> </h1>
+		<h1><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
 </script>
