--- a/main.html
+++ b/main.html
@@ -4,12 +4,21 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.container{
+	width: 200px;
+	background-color: purple;
+	border-left-color: green;
+	border-left-width: 5px;
+	padding: 10px;  
+}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <div class="container">
-	  <h1 class="heading"><u>This is a Heading</u> </h1>
+	  <h1 id="heading"><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
 </script>
