--- a/main.html
+++ b/main.html
@@ -4,11 +4,20 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.main{
+	width: 200px;
+	background-color: purple;
+	border-left-color: green;
+	border-left-width: 5px;
+	padding: 10px;  
+}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div >
+    <div class="main">
 	  <h1 id="heading"><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
