--- a/main.html
+++ b/main.html
@@ -4,20 +4,19 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
+<!-- 	<style>
 		.main{
 	width: 200px;
 	background-color: purple;
 	border-left-color: green;
-	border-left-width: 5px;
 	padding: 10px;  
 }
-	</style>
+	</style> -->
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div class="main">
+    <div class="main" style="border-left-width: 5px; width: 200px; background-color: purple; border-left-color: green; padding: 20px;">
 	  <h1 id="heading"><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
