--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div class="main" style="border-left-width: 5px; width: 200px; background-color: purple; border-left-color: green; padding: 20px;">
+    <div style="border-left-width: 5px; width: 200px; background-color: purple; border-left-color: green; padding: 20px;">
 	  <h1 id="heading"><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
