--- a/main.html
+++ b/main.html
@@ -4,19 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-<!-- 	<style>
-		.main{
-	width: 200px;
-	background-color: purple;
-	border-left-color: green;
-	padding: 10px;  
-}
-	</style> -->
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div style="width: 200px; border-left: 5px solid green; background-color: purple;padding: 10px;">
+    <div class=main>
 	  <h1 id="heading"><u>This is a Heading</u> </h1>
 </div>
     <script type="text/javascript" src="./script.js">
